--- a/.gitignore
+++ b/.gitignore
@@ -212,4 +212,4 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-/[Udemy] Complete Python Bootcamp Go from zero to hero in Python 3/
+/put_files_here/
